--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="https://github.com/Purity0082/First-Project" target="_blank">GitHub</a>
         </button>
         <button class="bg-neutral-700 p-2 rounded-lg shadow-lg w-64">
-            <a href="" target="">Frontend Mentor</a>
+            <a href="https://www.frontendmentor.io/profile/Purity0082" target="_blank">Frontend Mentor</a>
         </button>
         <button class="bg-neutral-700 p-2 rounded-lg shadow-lg w-64">
             <a href="https://www.linkedin.com/in/temi-adelanwa/" target="_blank">LinkedIn</a>
